<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CBank24</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="unknown">Không rõ</string>
    <string name="main_search">Tra cứu</string>
    <string name="main_my_asset">Tài sản của tôi</string>
    <string name="main_validation">Thẩm định</string>
    <string name="main_inbox">Hộp thoại</string>
    <string name="main_account">Tài khoản</string>
    <string name="splash_citics_vn" translatable="false">Citics.vn</string>
    <string name="splash_intro" translatable="false">Real estate made simple</string>
    <string name="splash_version">Phiên bản 2.4</string>
    <string name="splash_copyright">© 2022 Bản quyền thuộc về Citics.vn.</string>
    <string name="empty" translatable="false" />
    <string name="login_register"><![CDATA[<html>Chưa có tài khoản? <b><font color=\'#ffb900\'>Đăng ký</font></b></html>]]></string>
    <string name="login_title"><![CDATA[<html>Hợp nhất giao dịch<br/><b>tụ hội thành công</b></html>]]></string>
    <string name="login_description">Vui lòng đăng nhập để sử dụng dịch vụ Citics.vn</string>
    <string name="login_email">Email hoặc số điện thoại *</string>
    <string name="login_pass">Mật khẩu *</string>
    <string name="login_signin">Đăng nhập</string>
    <string name="login_forgetpass">Quên mật khẩu</string>
    <string name="login_hint_email">Nhập email hoặc số điện thoại</string>
    <string name="login_hint_pass">Nhập mật khẩu</string>
    <string name="intro_register_one_title">Gia nhập cộng đồng</string>
    <string name="intro_register_one_subtitle">môi giới chính hiệu</string>
    <string name="intro_register_two_title">Tất cả trên một ứng dụng</string>
    <string name="intro_register_two_subtitle">Giờ đây, bạn linh hoạt liên kết khách hàng và rổ hàng của bạn đang có cho tất cả dịch vụ liên quan đến Bất động sản.</string>
    <string name="intro_register_three_title">Công cụ làm việc độc quyền</string>
    <string name="intro_register_three_subtitle">Bạn được cung cấp công cụ tra cứu nhanh và định giá tài sản độc quyền với Citics.vn.</string>
    <string name="intro_register_four_title">Linh hoạt chuyển đổi dịch vụ</string>
    <string name="intro_register_four_subtitle">Citics.vn giúp bạn linh hoạt chuyển đổi hồ sơ cho tất cả dịch vụ trên cùng 1 tài sản, 1 khách hàng.</string>
    <string name="forget_pass_btn">Lấy mã xác thực</string>
    <string name="register_login"><![CDATA[<html>Đã có tài khoản? <b><font color=\'#ffb900\'>Đăng nhập</font></b></html>]]></string>
    <string name="register_title">Thông tin đăng ký</string>
    <string name="register_subtitle">Vui lòng điền thông tin đăng ký bên dưới</string>
    <string name="register_info">Thông tin cá nhân</string>
    <string name="register_name">Họ và tên *</string>
    <string name="register_tf_name">Nhập tên đầy đủ của bạn</string>
    <string name="register_phone">Số điện thoại *</string>
    <string name="register_tf_phone">Nhập số điện thoại</string>
    <string name="register_email">Email *</string>
    <string name="register_tf_email">Nhập email của bạn</string>
    <string name="register_work">Yêu cầu về công việc</string>
    <string name="register_work_city">Tỉnh thành bạn muốn làm việc *</string>
    <string name="register_work_tf_city">Tỉnh thành bạn muốn làm việc</string>
    <string name="register_job">Nghề nghiệp hiện tại *</string>
    <string name="register_tf_job">Công việc hiện tại của bạn</string>
    <string name="register_job_thamdinhgia">Bạn đã từng làm thẩm định giá?</string>
    <string name="register_cmnd_image">Giấy tờ tùy thân *</string>
    <string name="register_request_btn">Gửi yêu cầu</string>
    <string name="register_term"><![CDATA[<html><font color=\'#747576\'>Bằng cách gửi yêu cầu tạo tài khoản bạn đồng ý</font><br/><font color=\'#072273\'>Điều khoản sử dụng</font></html>]]></string>
    <string name="the_name_of_user">The name of user</string>
    <string name="profile_tk">Thống kê</string>
    <string name="cpoint">Citics Points</string>
    <string name="profile_hscn">Hồ sơ cá nhân</string>
    <string name="profile_tltb">Thiết lập thông báo</string>
    <string name="profile_logout">Đăng xuất khỏi ứng dụng</string>
    <string name="profile_logout_title">Đăng xuất</string>
    <string name="profile_logout_dialog">Bạn chắc chắn muốn đăng xuất khỏi ứng dụng Citics.vn?</string>
    <string name="profile_delete">Xoá tài khoản</string>
    <string name="stf_loading">Đang tải dữ liệu</string>
    <string name="stf_empty">Không có dữ liệu</string>
    <string name="stf_retry">Thử lại</string>
    <string name="stf_error_api">Lỗi trong quá trình lấy dữ liệu</string>
    <string name="stf_no_network">Vui lòng kiểm tra mạng trên thiết bị</string>
    <string name="coming_soon_title">Đang phát triển</string>
    <string name="coming_soon">Tính năng này đang được phát triển. Cảm ơn bạn sử dụng và tin tưởng vào ứng dụng định giá của Citics.vn. Chúng tôi sẽ thông báo đến bạn sớm nhất có thể trong các bản cập nhật sắp tới</string>
    <string name="register_cmnd_title">Giấy tờ tùy thân</string>
    <string name="register_area">Khu vực tài sản</string>
    <string name="area_city">Khu vực</string>
    <string name="register_area_sao">Khu vực tài sản*</string>
    <string name="register_job_title">Nghề nghiệp hiện tại</string>
    <string name="picker_fail">Lỗi khi chọn hình ảnh</string>
    <string name="camera_permission_denied">Bạn phải cho phép quyền để sử dụng tính năng</string>
    <string name="register_picker_image">Chọn ảnh từ thư viện</string>
    <string name="register_take_image">Chụp hình</string>
    <string name="profile_delete_account">Sau khi xác nhận xóa tài khoản, bạn không thể truy cập vào dịch vụ của Citics.vn
\n\n Tài khoản của bạn sẽ chuyển qua trạng thái "Tạm đóng tài khoản". Citics.vn cần 30 ngày để hoàn tất việc xóa tài khoản hoàn toàn, do mỗi hồ sơ thẩm định đều cần có định danh của người thực hiện.
\n\nBạn có thể liên hệ 1900 6333075, nếu muốn khôi phục lại tài khoản trong thời gian này.</string>
    <string name="profile_delete_cancel">Hủy xóa tài khoản</string>
    <string name="profile_delete_confirm">Xác nhận xóa tài khoản</string>
    <string name="register_success">Đăng ký thành công</string>
    <string name="register_fail">Đăng ký thất bại</string>
    <string name="register_error_title">Thông báo</string>
    <string name="btn_ok">Đã hiểu</string>
    <string name="btn_accept">Đồng ý</string>
    <string name="btn_accept_ok">OK</string>
    <string name="btn_cancel">Hủy thao tác</string>
    <string name="btn_cancel_dx">Hủy đăng xuất</string>
    <string name="dialog_title">Thông tin</string>
    <string name="vptsss">Vi phạm tài sản so sánh</string>
    <string name="vipham">Tài sản do bạn chọn làm TSSS thứ %1$d không phù hợp để hoàn thành hồ sơ thẩm định này. \n\n</string>
    <string name="forgetpass_email_success">Mã xác thực đã được gửi!</string>
    <string name="forgetpass_email_success_des">Xác nhận mật khẩu mới đã được gửi về email của bạn, vui lòng kiểm tra email.</string>
    <string name="forgetpass_backlogin_btn">Quay lại đăng nhập</string>
    <string name="forgetpass_phone_success">Tạo mật khẩu hoàn tất!</string>
    <string name="forgetpass_phone_success_des">Vui lòng quay về đăng nhập, sử dụng mật khẩu vừa khởi tạo để đăng nhập vào hệ thống của Citics.vn
Chúc bạn có một ngày làm việc hiệu quả!</string>
    <string name="register_success_title">Yêu cầu tạo tài khoản thành công</string>
    <string name="register_success_des">Chúng tôi đã nhận yêu cầu tạo tài khoản của bạn. Trong vòng 48h tài khoản của bạn sẽ được xác thực, vui lòng kiểm tra email hoặc tin nhắn SMS.
Cảm ơn bạn đã tin dùng Citics.vn</string>
    <string name="register_success_btn">Các buớc tiếp theo</string>
    <string name="forgetpass_otp_title">Mã xác nhận</string>
    <string name="forgetpass_otp_hint">Nhập mã xác nhận</string>
    <string name="forgetpass_otp_countdown">Lấy lại mã xác nhận sau %1$s</string>
    <string name="forgetpass_otp_waiting">Nhập mã xác nhận đã được gửi qua số điện thoại hoặc email mà bạn đăng ký tài khoản Citics.vn</string>
    <string name="forgetpass_otp_resend">Mã xác nhận đã hết hạn. Vui lòng chọn Gửi lại để nhận mã xác nhận mới</string>
    <string name="forgetpass_confirm_btn">Xác nhận</string>
    <string name="forgetpass_new_pass">Mật khẩu mới</string>
    <string name="forgetpass_new_pass_hint">Nhập mật khẩu mới</string>
    <string name="forgetpass_retype_pass">Nhập lại mật khẩu mới</string>
    <string name="forgetpass_retype_pass_hint">Nhập lại mật khẩu mới</string>
    <string name="forgetpass_create_pass_btn">Tạo mật khẩu</string>
    <string name="register_help">Tìm hiểu thêm về Citics?</string>
    <string name="register_help_btn">Tìm hiểu ngay</string>
    <string name="register_back_login">Đăng nhập</string>
    <string name="email_wrong">Email không hợp lệ</string>
    <string name="login_wrong">Thông tin không hợp lệ</string>
    <string name="forgetpass_max_length">Tối thiểu 4 ký tự</string>
    <string name="forgetpass_wrong_pass">Mật khẩu mới xác nhận không trùng khớp không hợp lệ</string>
    <string name="map_search">Bắt đầu tìm kiếm …</string>
    <string name="lookup_info">Thông tin bản đồ</string>
    <string name="lookup_tab_1">Diễn giải chức năng bản đồ</string>
    <string name="lookup_tab_2">Thông tin dữ liệu bản đồ</string>
    <string name="lookup_tab_3">Diễn giải mục đích sử dụng đất</string>
    <string name="lookup_tab_1_row_1">Thông tin đơn giá cho thửa đất, đơn vị là triệu đồng/m2</string>
    <string name="lookup_tab_1_row_2">Xem quy hoạch và bản đồ phân loại chức năng sử dụng đất</string>
    <string name="lookup_tab_1_row_3">Kích hoạt vị trí hiện tại của bạn, cho phép bản đồ thể hiện các tài sản gần bạn</string>
    <string name="lookup_tab_1_row_4">Phóng to, thu nhỏ bản đồ</string>
    <string name="lookup_tab_1_row_5">Hiển thị bản đồ theo tuyến đường</string>
    <string name="lookup_tab_1_row_6">Hiển thị bản đồ theo hình ảnh từ vệ tinh</string>
    <string name="lookup_tab_2_title">Khu vực dữ liệu bản đồ</string>
    <string name="lookup_tab_2_chooser_title">Khu vực</string>
    <string name="lookup_tab_2_chooser_description">Chọn khu vực</string>
    <string name="lookup_tab_2_review_1" translatable="false">Quyết định: theo quyết định số 14/2023 do UBND Thành phố Hồ Chí Minh ngày 15/4/2022.
Đồ án: theo đồ án quy hoạch chi tiết dây dựng khu dân cư liên phường 14-15, Quận 11.</string>
    <string name="lookup_tab_2_review_2" translatable="false">Thành phố Hồ Chí Minh</string>
    <string name="lookup_tab_2_row_1">Giá sơ bộ</string>
    <string name="lookup_tab_2_row_2">Quy hoạch sử dụng đất</string>
    <string name="lookup_tab_2_row_3">Ranh địa chính</string>
    <string name="lookup_tab_2_row_4">Ranh lộ giới</string>
    <string name="lookup_tab_2_row_5">Dự án chung cư</string>
    <string name="search_area_title">Khu vực được chọn</string>
    <string name="search_area_reset">Thiết lập lại</string>
    <string name="search_area_city">Tỉnh/Thành phố</string>
    <string name="search_area_district">Quận/Huyện</string>
    <string name="search_area_ward">Phường/Xã</string>
    <string name="search_area_hint">Tìm kiếm Quận/Huyện, Phường/Xã</string>
    <string name="lookup_filter_land">Nhà đất</string>
    <string name="lookup_filter_apartment">Căn hộ</string>
    <string name="lookup_filter_land_address">Theo địa chỉ</string>
    <string name="lookup_filter_land_sotosothua">Theo số tờ-thửa</string>
    <string name="lookup_filter_land_toado">Theo tọa độ</string>
    <string name="title_thong_ke">Thống kê</string>
    <string name="title_tra_cuu">Tra cứu</string>
    <string name="title_ho_so">Hồ sơ</string>
    <string name="title_hop_thoai">Hộp thoại</string>
    <string name="title_tai_khoan">Tài khoản</string>
</resources>